--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -5,6 +5,21 @@
        client code. 
  [***] Changes requiring important modifications to existing client code.
 
+ ??, 2001
+
+ - Release of version 1.2alpha_0
+
+ - Added event reporting capability to the Hierachy class.
+ 
+ - Corrected a performance bug in the NDC class as observed by Dan Milstein. [*]
+
+ - Removed deprecated methods setOptions and getOptionStrings defined
+   in the org.apache.log4j.spi.OptionHandler interface. This interface
+   is implemented by most log4j appenders and layouts. In particular,
+   all appenders and layouts shipped with log4j contain these
+   deprecated methods. They have become totally redundant after we
+   moved to JavaBeans style configuration in log4j 1.1.
+
  June 19, 2001
 
  - Release of version 1.1.3
