Enclosed is a modified version of DOMConfigurator.java, based on the current CVS version 1.27.  This modified version supports java.io.Reader objects in the method doConfigure(), instead of only InputStream. org.xml.sax.InputSource supports a constructor which takes a Reader object, so the change is very simple:
- modified the existing doConfigure(InputStream, Hierarchy) method to
doConfigure(InputSource, Hierarchy) and made it protected instead of public.
- created a new public version of doConfigure(InputStream,Hierarchy) which
calls doConfigure(InputSource, Hierarchy).
- created a new public method, doConfigure(Reader, Hierarchy), which calls
doConfigure(InputSource, Hierarchy).


That's it.  I needed this modification because I have a case where the xml
configuration data is coming from a string, not a file.  So I need to use
the java.io.StringReader class to wrap the existing string.



PR:
Obtained from:
Submitted by: Mark Womack
Reviewed by: Celo

--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -36,6 +36,11 @@
    deprecated methods. They have become totally redundant after we
    moved to JavaBeans style configuration in log4j 1.1.
 
+ - Added supports java.io.Reader objects in the method doConfigure(),
+   instead of only InputStream. Thanks to Mark Womack for submitting
+   the relevant patch. [*]
+
+
  June 19, 2001
 
  - Release of version 1.1.3
