The Priority class has been renamed to Level. Priority now extends Level for backward compatibility. Many classes have been modified to reflect the change.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/test/witness/getOptions.1
+++ b/src/java/org/apache/log4j/test/witness/getOptions.1
@@ -1,4 +1,6 @@
 log4j.appender.f.Append=false
+log4j.appender.f.BufferSize=8192
+log4j.appender.f.BufferedIO=false
 log4j.appender.f.File=temp
 log4j.appender.f.ImmediateFlush=true
 log4j.appender.f.layout.ContentType=text/plain
