--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -9,6 +9,14 @@
 
  - Release of version 1.2alpha_0
 
+ - The CategoryFactory class has been replaced by the LoggerFactory
+   class. The makeNewCategoryInstance method has been renamed as
+   makeNewLoggerInstance. This change requires client code make use of
+   extended Category classes to be recompiled. [**]
+
+ - The Logger class replaced the Category class. Category class not
+   extends Logger for full backward compatibility. [*]
+
  - The Category.assert method has been replaced by
    Category.assertLog.  This change was mecessary because assert is a
    language reserved word in JDK 1.4. [**]
