--- a/docs/HISTORY
+++ b/docs/HISTORY
@@ -61,6 +61,9 @@
    deprecated methods. They have become totally redundant after we
    moved to JavaBeans style configuration in log4j 1.1. [**]
 
+ - The disable(Level) methods in Hierarchy have been removed and been
+   replaced by enable counterparts. [**]
+
  - Removed deprecated methods disable(Priority), disableAll,
    disableDebug, disableInfo and enableAll in BasicConfigurator. [*]
 
